# libhomegear-base

./: .gitattributes  .gitignore  .project  CMakeLists.txt  LICENSE  Makefile  README.md  config.h  config.status  configure  configure.ac  contributors  getVersion.sh  git-pre-commit  libtool  makeCoverity.sh  makeRelease.sh
debian/: changelog  control  copyright  postrm  preinst  rules
src/: BaseLib.cpp  BaseLib.h  Directories.dox  Exception.h  IEvents.cpp  IEvents.h  IQueue.cpp  IQueue.h  IQueueBase.cpp  IQueueBase.h  ITimedQueue.cpp  ITimedQueue.h  Makefile  Makefile.am  Makefile.in  StateGuard.h  Variable.cpp  Variable.h
src/.deps/: BaseLib.Plo  IQueue.Plo  Variable.Plo
src/Database/: DatabaseTypes.h  IDatabaseController.h
src/DeviceDescription/: BinaryPayload.cpp  BinaryPayload.h  DevicePacket.cpp  DevicePacket.h  DevicePacketResponse.cpp  DevicePacketResponse.h  DeviceTranslations.cpp  DeviceTranslations.h  DeviceUi.cpp  DeviceUi.h  Devices.cpp  Devices.h  Function.cpp  Function.h  HomegearDevice.cpp  HomegearDevice.h  HomegearDeviceTranslation.cpp  HomegearDeviceTranslation.h  HomegearDeviceUi.cpp  HomegearDeviceUi.h  HomegearUiElement.cpp  HomegearUiElement.h  HomegearUiElements.cpp  HomegearUiElements.h  HttpPayload.cpp  HttpPayload.h  JsonPayload.cpp  JsonPayload.h  Logical.cpp  Logical.h  Parameter.cpp  Parameter.h  ParameterCast.cpp  ParameterCast.h  ParameterGroup.cpp  ParameterGroup.h  Physical.cpp  Physical.h  RunProgram.cpp  RunProgram.h  (+11 more)
src/DeviceDescription/.deps/: BinaryPayload.Plo  DevicePacket.Plo  Devices.Plo  Function.Plo  HomegearDevice.Plo  HttpPayload.Plo  JsonPayload.Plo  Logical.Plo  Parameter.Plo  ParameterCast.Plo  ParameterGroup.Plo  Physical.Plo  RunProgram.Plo  Scenario.Plo  SupportedDevice.Plo
src/DeviceDescription/HomeMatic/: HmConverter.cpp  HmConverter.h  HmDevice.cpp  HmDevice.h  HmLogicalParameter.cpp  HmLogicalParameter.h  HmPhysicalParameter.cpp  HmPhysicalParameter.h
src/DeviceDescription/HomeMatic/.deps/: HmConverter.Plo  HmConverter.Tpo  HmDevice.Plo  HmDevice.Tpo  HmLogicalParameter.Plo  HmPhysicalParameter.Plo
src/DeviceDescription/UI/: HomegearUiElement.cpp  HomegearUiElement.h  HomegearUiElements.cpp  HomegearUiElements.h  UiColor.cpp  UiColor.h  UiCondition.cpp  UiCondition.h  UiControl.cpp  UiControl.h  UiElements.cpp  UiElements.h  UiGrid.cpp  UiGrid.h  UiIcon.cpp  UiIcon.h  UiText.cpp  UiText.h  UiVariable.cpp  UiVariable.h
src/Encoding/: Ansi.cpp  Ansi.h  BinaryDecoder.cpp  BinaryDecoder.h  BinaryEncoder.cpp  BinaryEncoder.h  BinaryRpc.cpp  BinaryRpc.h  BitReaderWriter.cpp  BitReaderWriter.h  GZip.cpp  GZip.h  HTTP.cpp  HTTP.h  Html.cpp  Html.h  Http.cpp  Http.h  JsonDecoder.cpp  JsonDecoder.h  JsonEncoder.cpp  JsonEncoder.h  RPCDecoder.cpp  RPCDecoder.h  RPCEncoder.cpp  RPCEncoder.h  RPCHeader.cpp  RPCHeader.h  RpcDecoder.cpp  RpcDecoder.h  RpcEncoder.cpp  RpcEncoder.h  RpcHeader.cpp  RpcHeader.h  RpcMethod.cpp  RpcMethod.h  WebSocket.cpp  WebSocket.h  Windows1252.cpp  Windows1252.h  (+8 more)
src/Encoding/.deps/: BinaryDecoder.Plo  BinaryEncoder.Plo  HTTP.Plo  JsonDecoder.Plo  JsonEncoder.Plo  RPCDecoder.Plo  RPCDecoder.Tpo  RPCEncoder.Plo  RPCEncoder.Tpo  WebSocket.Plo  XMLRPCDecoder.Plo  XMLRPCDecoder.Tpo  XMLRPCEncoder.Plo
src/Encoding/RapidXml/: rapidxml.cpp  rapidxml.h  rapidxml_print.hpp
src/Flows/: INode.cpp  INode.h  NodeFactory.h
src/HelperFunctions/: Base64.cpp  Base64.h  Color.cpp  Color.h  Crypt.cpp  Crypt.h  DisposableLockGuard.h  Ha.cpp  Ha.h  HelperFunctions.cpp  HelperFunctions.h  Io.cpp  Io.h  Math.cpp  Math.h  Net.cpp  Net.h  Pid.cpp  Pid.h
src/HelperFunctions/.deps/: Color.Plo  Crypt.Plo  HelperFunctions.Plo  Io.Plo  Math.Plo  Net.Plo
src/IPC/: IIpcClient.cpp  IIpcClient.h  IpcResponse.h
src/Licensing/: Licensing.cpp  Licensing.h  LicensingFactory.h
src/Licensing/.deps/: Licensing.Plo
src/LowLevel/: Gpio.cpp  Gpio.h  Spi.cpp  Spi.h
src/LowLevel/.deps/: Gpio.Plo
src/Managers/: Environment.cpp  Environment.h  FileDescriptorManager.cpp  FileDescriptorManager.h  ProcessManager.cpp  ProcessManager.h  SerialDeviceManager.cpp  SerialDeviceManager.h  ThreadManager.cpp  ThreadManager.h  TranslationManager.cpp  TranslationManager.h
src/Managers/.deps/: FileDescriptorManager.Plo  SerialDeviceManager.Plo
src/Output/: Output.cpp  Output.h
src/Output/.deps/: Output.Plo
src/SSDP/: SSDP.cpp  SSDP.h
src/SSDP/.deps/: SSDP.Plo
src/ScriptEngine/: IScriptEngineEventSink.h  ScriptInfo.cpp  ScriptInfo.h
src/Security/: Acl.cpp  Acl.h  Acls.cpp  Acls.h  Gcrypt.cpp  Gcrypt.h  Hash.cpp  Hash.h  Mac.cpp  Mac.h  SecureVector.h  Sign.cpp  Sign.h
src/Settings/: Settings.cpp  Settings.h  TranslationFileParser.cpp  TranslationFileParser.h
src/Settings/.deps/: Settings.Plo
src/Sockets/: HTTPClient.cpp  HTTPClient.h  Hgdc.cpp  Hgdc.h  HttpClient.cpp  HttpClient.h  HttpServer.cpp  HttpServer.h  IWebserverEventSink.h  Modbus.cpp  Modbus.h  RpcClientInfo.cpp  RpcClientInfo.h  SerialReaderWriter.cpp  SerialReaderWriter.h  ServerInfo.cpp  ServerInfo.h  SocketExceptions.h  SocketOperations.cpp  SocketOperations.h  Ssdp.cpp  Ssdp.h  TcpSocket.cpp  TcpSocket.h  UdpSocket.cpp  UdpSocket.h
src/Sockets/.deps/: HTTPClient.Plo  SerialReaderWriter.Plo  ServerInfo.Plo  SocketOperations.Plo
src/Systems/: Central.cpp  Central.h  DeviceFamily.cpp  DeviceFamily.h  DeviceTypes.cpp  DeviceTypes.h  FamilySettings.cpp  FamilySettings.h  GlobalServiceMessages.cpp  GlobalServiceMessages.h  ICentral.cpp  ICentral.h  IDeviceFamily.cpp  IDeviceFamily.h  IPhysicalInterface.cpp  IPhysicalInterface.h  LogicalDevice.cpp  LogicalDevice.h  Packet.cpp  Packet.h  Peer.cpp  Peer.h  PhysicalInterfaceSettings.h  PhysicalInterfaces.cpp  PhysicalInterfaces.h  Role.h  ServiceMessage.cpp  ServiceMessage.h  ServiceMessages.cpp  ServiceMessages.h  SystemFactory.h  UpdateInfo.cpp  UpdateInfo.h
src/Systems/.deps/: Central.Plo  DeviceFamily.Plo  DeviceTypes.Plo  IPhysicalInterface.Plo  LogicalDevice.Plo  Peer.Plo  ServiceMessages.Plo
src/Threads/: Threads.cpp  Threads.h
src/Threads/.deps/: Threads.Plo
