cmake_minimum_required(VERSION 3.8)
project(libhomegear-base)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        src/Database/DatabaseTypes.h
        src/Database/IDatabaseController.h
        src/DeviceDescription/HomeMatic/HmConverter.cpp
        src/DeviceDescription/HomeMatic/HmConverter.h
        src/DeviceDescription/HomeMatic/HmDevice.cpp
        src/DeviceDescription/HomeMatic/HmDevice.h
        src/DeviceDescription/HomeMatic/HmLogicalParameter.cpp
        src/DeviceDescription/HomeMatic/HmLogicalParameter.h
        src/DeviceDescription/HomeMatic/HmPhysicalParameter.cpp
        src/DeviceDescription/HomeMatic/HmPhysicalParameter.h
        src/DeviceDescription/UI/UiCondition.cpp
        src/DeviceDescription/UI/UiCondition.h
        src/DeviceDescription/UI/UiElements.cpp
        src/DeviceDescription/UI/UiElements.h
        src/DeviceDescription/UI/HomegearUiElement.cpp
        src/DeviceDescription/UI/HomegearUiElement.h
        src/DeviceDescription/UI/HomegearUiElements.cpp
        src/DeviceDescription/UI/HomegearUiElements.h
        src/DeviceDescription/UI/UiControl.cpp
        src/DeviceDescription/UI/UiControl.h
        src/DeviceDescription/UI/UiGrid.cpp
        src/DeviceDescription/UI/UiGrid.h
        src/DeviceDescription/UI/UiIcon.cpp
        src/DeviceDescription/UI/UiIcon.h
        src/DeviceDescription/UI/UiText.cpp
        src/DeviceDescription/UI/UiText.h
        src/DeviceDescription/UI/UiVariable.cpp
        src/DeviceDescription/UI/UiVariable.h
        src/DeviceDescription/BinaryPayload.cpp
        src/DeviceDescription/BinaryPayload.h
        src/DeviceDescription/DevicePacket.cpp
        src/DeviceDescription/DevicePacket.h
        src/DeviceDescription/DevicePacketResponse.cpp
        src/DeviceDescription/DevicePacketResponse.h
        src/DeviceDescription/Devices.cpp
        src/DeviceDescription/Devices.h
        src/DeviceDescription/DeviceTranslations.cpp
        src/DeviceDescription/DeviceTranslations.h
        src/DeviceDescription/Function.cpp
        src/DeviceDescription/Function.h
        src/DeviceDescription/HomegearDevice.cpp
        src/DeviceDescription/HomegearDevice.h
        src/DeviceDescription/HomegearDeviceTranslation.cpp
        src/DeviceDescription/HomegearDeviceTranslation.h
        src/DeviceDescription/HttpPayload.cpp
        src/DeviceDescription/HttpPayload.h
        src/DeviceDescription/JsonPayload.cpp
        src/DeviceDescription/JsonPayload.h
        src/DeviceDescription/Logical.cpp
        src/DeviceDescription/Logical.h
        src/DeviceDescription/Parameter.cpp
        src/DeviceDescription/Parameter.h
        src/DeviceDescription/ParameterCast.cpp
        src/DeviceDescription/ParameterCast.h
        src/DeviceDescription/ParameterGroup.cpp
        src/DeviceDescription/ParameterGroup.h
        src/DeviceDescription/Physical.cpp
        src/DeviceDescription/Physical.h
        src/DeviceDescription/RunProgram.cpp
        src/DeviceDescription/RunProgram.h
        src/DeviceDescription/Scenario.cpp
        src/DeviceDescription/Scenario.h
        src/DeviceDescription/SupportedDevice.cpp
        src/DeviceDescription/SupportedDevice.h
        src/Encoding/RapidXml/rapidxml.cpp
        src/Encoding/RapidXml/rapidxml.h
        src/Encoding/Ansi.cpp
        src/Encoding/Ansi.h
        src/Encoding/BinaryDecoder.cpp
        src/Encoding/BinaryDecoder.h
        src/Encoding/BinaryEncoder.cpp
        src/Encoding/BinaryEncoder.h
        src/Encoding/BinaryRpc.cpp
        src/Encoding/BinaryRpc.h
        src/Encoding/BitReaderWriter.cpp
        src/Encoding/BitReaderWriter.h
        src/Encoding/GZip.cpp
        src/Encoding/GZip.h
        src/Encoding/Html.cpp
        src/Encoding/Html.h
        src/Encoding/Http.cpp
        src/Encoding/Http.h
        src/Encoding/JsonDecoder.cpp
        src/Encoding/JsonDecoder.h
        src/Encoding/JsonEncoder.cpp
        src/Encoding/JsonEncoder.h
        src/Encoding/RpcDecoder.cpp
        src/Encoding/RpcDecoder.h
        src/Encoding/RpcEncoder.cpp
        src/Encoding/RpcEncoder.h
        src/Encoding/RpcHeader.cpp
        src/Encoding/RpcHeader.h
        src/Encoding/RpcMethod.cpp
        src/Encoding/RpcMethod.h
        src/Encoding/WebSocket.cpp
        src/Encoding/WebSocket.h
        src/Encoding/XmlrpcDecoder.cpp
        src/Encoding/XmlrpcDecoder.h
        src/Encoding/XmlrpcEncoder.cpp
        src/Encoding/XmlrpcEncoder.h
        src/HelperFunctions/Base64.cpp
        src/HelperFunctions/Base64.h
        src/HelperFunctions/Color.cpp
        src/HelperFunctions/Color.h
        src/HelperFunctions/HelperFunctions.cpp
        src/HelperFunctions/HelperFunctions.h
        src/HelperFunctions/Io.cpp
        src/HelperFunctions/Io.h
        src/HelperFunctions/Math.cpp
        src/HelperFunctions/Math.h
        src/HelperFunctions/Net.cpp
        src/HelperFunctions/Net.h
        src/HelperFunctions/Pid.cpp
        src/HelperFunctions/Pid.h
        src/Licensing/Licensing.cpp
        src/Licensing/Licensing.h
        src/Licensing/LicensingFactory.h
        src/LowLevel/Gpio.cpp
        src/LowLevel/Gpio.h
        src/LowLevel/Spi.cpp
        src/LowLevel/Spi.h
        src/Managers/FileDescriptorManager.cpp
        src/Managers/FileDescriptorManager.h
        src/Managers/SerialDeviceManager.cpp
        src/Managers/SerialDeviceManager.h
        src/Managers/ThreadManager.cpp
        src/Managers/ThreadManager.h
        src/Output/Output.cpp
        src/Output/Output.h
        src/ScriptEngine/ScriptInfo.cpp
        src/ScriptEngine/ScriptInfo.h
        src/Security/Acl.cpp
        src/Security/Acl.h
        src/Security/Gcrypt.cpp
        src/Security/Gcrypt.h
        src/Security/Hash.cpp
        src/Security/Hash.h
        src/Security/Mac.cpp
        src/Security/Mac.h
        src/Security/Sign.cpp
        src/Security/Sign.h
        src/Settings/Settings.cpp
        src/Settings/Settings.h
        src/Sockets/Hgdc.cpp
        src/Sockets/Hgdc.h
        src/Sockets/HttpClient.cpp
        src/Sockets/HttpClient.h
        src/Sockets/HttpServer.cpp
        src/Sockets/HttpServer.h
        src/Sockets/IWebserverEventSink.h
        src/Sockets/Modbus.cpp
        src/Sockets/Modbus.h
        src/Sockets/RpcClientInfo.cpp
        src/Sockets/RpcClientInfo.h
        src/Sockets/SerialReaderWriter.cpp
        src/Sockets/SerialReaderWriter.h
        src/Sockets/ServerInfo.cpp
        src/Sockets/ServerInfo.h
        src/Sockets/SocketExceptions.h
        src/Sockets/Ssdp.cpp
        src/Sockets/Ssdp.h
        src/Sockets/TcpSocket.cpp
        src/Sockets/TcpSocket.h
        src/Sockets/UdpSocket.cpp
        src/Sockets/UdpSocket.h
        src/Systems/DeviceFamily.cpp
        src/Systems/DeviceFamily.h
        src/Systems/FamilySettings.cpp
        src/Systems/FamilySettings.h
        src/Systems/GlobalServiceMessages.cpp
        src/Systems/GlobalServiceMessages.h
        src/Systems/ICentral.cpp
        src/Systems/ICentral.h
        src/Systems/IDeviceFamily.cpp
        src/Systems/IDeviceFamily.h
        src/Systems/IPhysicalInterface.cpp
        src/Systems/IPhysicalInterface.h
        src/Systems/Packet.h
        src/Systems/Peer.cpp
        src/Systems/Peer.h
        src/Systems/PhysicalInterfaces.cpp
        src/Systems/PhysicalInterfaces.h
        src/Systems/PhysicalInterfaceSettings.h
        src/Systems/ServiceMessages.cpp
        src/Systems/ServiceMessages.h
        src/Systems/SystemFactory.h
        src/Systems/UpdateInfo.cpp
        src/Systems/UpdateInfo.h
        src/BaseLib.cpp
        src/BaseLib.h
        src/Exception.h
        src/IEvents.cpp
        src/IEvents.h
        src/IQueue.cpp
        src/IQueue.h
        src/IQueueBase.cpp
        src/IQueueBase.h
        src/ITimedQueue.cpp
        src/ITimedQueue.h
        src/Variable.cpp
        src/Variable.h
        src/Security/Acls.cpp
        src/Security/Acls.h
        src/Managers/ProcessManager.cpp
        src/Managers/ProcessManager.h
        src/Security/SecureVector.h
        src/Managers/Environment.cpp
        src/Managers/Environment.h
        src/Sockets/Hgdc.cpp
        src/Sockets/Hgdc.h
        src/Systems/Role.h)

add_library(homegear-base SHARED ${SOURCE_FILES})